--- a/css/style.css
+++ b/css/style.css
@@ -64,11 +64,11 @@ Slider
 }
 .cd-slider > li:nth-of-type(2) {
   background-color: #ffb251;
-  background-image: url(../img/img-2.jpg);
+  background-image: url(../img/img-3.jpg);
 }
 .cd-slider > li:nth-of-type(3) {
   background-color: #7d7160;
-  background-image: url(../img/img-3.jpg);
+  background-image: url(../img/img-2.jpg);
 }
 .cd-slider > li:nth-of-type(4) {
   background-color: #ff625a;
@@ -96,7 +96,7 @@ Slider
   font-size: 2.4rem;
 }
 .cd-slider > li p {
-  font-size: 1.4rem;
+  font-size: 2.4rem;
   line-height: 1.4;
 }
 .cd-slider > li .cd-btn {
@@ -323,9 +323,12 @@ svg cover layer
 }
 
 #board {
-  margin: 10px auto 14px;
-  width: 90%;
+  margin: 10px auto;
   max-width: 320px;
+}
+.placeholder {
+  width: 300px;
+  opacity: 0.4;
 }
 
 .board {
@@ -338,7 +341,7 @@ svg cover layer
 }
 
 .block {
-	fill: #7a2312;
+	fill: black;
 	width: 100px;
 	height: 100px;
 }
@@ -362,7 +365,7 @@ svg cover layer
 }
 
 .ldSpots {
-	fill: black;
+	fill: rgb(44, 158, 29);
 	r: 20;
 }
 .rdSpots {
@@ -386,7 +389,7 @@ svg cover layer
 .input-number,
 .input-number-decrement,
 .input-number-increment {
-  border: 1px solid #ccc;
+  border: 2px solid #ccc;
   height: 40px;
   user-select: none;
 }
@@ -417,4 +420,21 @@ svg cover layer
 .input-number-increment {
   border-left: none;
   border-radius: 0 4px 4px 0;
+}
+.circle {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  display: inline-block;
+}
+
+.effect1{
+	-webkit-box-shadow: 0 10px 6px -6px #777;
+	   -moz-box-shadow: 0 10px 6px -6px #777;
+	        box-shadow: 0 10px 6px -6px #777;
+}
+
+.technology {
+  width: 50px;
+  height: 50px;
 }
