--- a/css/style.css
+++ b/css/style.css
@@ -64,11 +64,11 @@ Slider
 }
 .cd-slider > li:nth-of-type(2) {
   background-color: #ffb251;
-  background-image: url(../img/img-3.jpg);
+  background-image: url(../img/img-2.jpg);
 }
 .cd-slider > li:nth-of-type(3) {
   background-color: #7d7160;
-  background-image: url(../img/img-2.jpg);
+  background-image: url(../img/img-3.jpg);
 }
 .cd-slider > li:nth-of-type(4) {
   background-color: #ff625a;
@@ -329,6 +329,7 @@ svg cover layer
 .placeholder {
   width: 300px;
   opacity: 0.4;
+  border: 1px solid white;
 }
 
 .board {
@@ -437,4 +438,51 @@ svg cover layer
 .technology {
   width: 50px;
   height: 50px;
+}
+
+.card {
+  position: relative; 
+  background-color: #ffffff; 
+  margin: 0 auto; 
+  width: 80%; 
+  min-width: 760px; 
+  height: 400px; 
+  border-radius: 5px; 
+  text-align: justify;
+}
+.card .part {
+  position: relative; 
+  text-align: -webkit-auto; 
+  width: 50%; 
+  min-width: 380px; 
+  height: 100%; 
+  text-align: center; 
+  display: inline-block;
+}
+
+.card .part.left {
+  background-color: #544f4f; 
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;  
+}
+
+.card .part.right {
+  background-color: #4a58c2d6; 
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  position: absolute; 
+  top: 0;
+  color: white;
+}
+
+@media screen and (max-width: 800px) { /*The following CSS runs only for displays with a width (in pixels) of more than 800px*/
+  .card {
+    width: 360px;
+    height: 800px;
+    display: block;
+  }
+  .card .part {
+    display: block;
+    height: 400px;
+  }
 }
