--- a/css/style.css
+++ b/css/style.css
@@ -440,7 +440,10 @@ svg cover layer
 }
 
 .techHolder {
-  
+  position: absolute;
+  bottom: 10%;
+  left: 50%;
+  margin-left: -20%;
 }
 .logo {
   width: 50px;
@@ -448,8 +451,8 @@ svg cover layer
 }
 
 .technology {
-  width: 50px;
-  height: 50px;
+  width: 35px;
+  height: 35px;
 }
 
 .card {
@@ -569,7 +572,7 @@ svg cover layer
   width: 15%; 
   border-radius: 50%;
   border: 2px solid gray;
-  filter: grayscale(1);
+  /* filter: grayscale(1); */
   background-color: white;
 }
 .anuar:hover {
